--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="release_date_label">Release Date :</string>
     <string name="poster_container_cd">Poster container</string>
     <string name="details_poster_container_cd">Details Poster Container</string>
+    <string name="access_internet_error">Sorry, but your app don\'t have internet access :(</string>
 </resources>
